config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: music-service
  labels:
    app: music-service
spec:
  type: ClusterIP
  selector:
    app: music-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
