config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music-service
                port:
                  number: 80
